{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 46,
  "lineage": "ba2cd8a4-a773-a30f-b6c2-0859cb8b8031",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/networkInterfaces/DevTestNIC",
            "internal_domain_name_suffix": "fi0ciiehglzuvibpxacv20yhnb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myNicConfiguration",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/publicIPAddresses/DynamicPublicIP1",
                "subnet_id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet1"
              }
            ],
            "location": "westeurope",
            "name": "DevTestNIC",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "azuredevtestrg"
          },
          "dependencies": [
            "azurerm_public_ip.myterraformpublicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.myterraformsubnet1",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsgassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/networkInterfaces/DevTestNIC|/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/networkSecurityGroups/DevTestNSG",
            "network_interface_id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/networkInterfaces/DevTestNIC",
            "network_security_group_id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/networkSecurityGroups/DevTestNSG"
          },
          "dependencies": [
            "azurerm_network_interface.myterraformnic",
            "azurerm_network_security_group.myterraformnsg",
            "azurerm_public_ip.myterraformpublicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.myterraformsubnet1",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/networkSecurityGroups/DevTestNSG",
            "location": "westeurope",
            "name": "DevTestNSG",
            "resource_group_name": "azuredevtestrg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/publicIPAddresses/DynamicPublicIP1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "DynamicPublicIP1",
            "resource_group_name": "azuredevtestrg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "RouteTable1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/routeTables/DevTestRouteTable1",
            "location": "westeurope",
            "name": "DevTestRouteTable1",
            "resource_group_name": "azuredevtestrg",
            "route": [
              {
                "address_prefix": "10.0.0.0/16",
                "name": "route1",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "name": "route2",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "name": "route3",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [
              "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet1"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "RouteTable2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/routeTables/DevTestRouteTable2",
            "location": "westeurope",
            "name": "DevTestRouteTable2",
            "resource_group_name": "azuredevtestrg",
            "route": [
              {
                "address_prefix": "10.0.0.0/16",
                "name": "route1",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "name": "route2",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "name": "route3",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [
              "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet2"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "RouteTable3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/routeTables/DevTestRouteTable3",
            "location": "westeurope",
            "name": "DevTestRouteTable3",
            "resource_group_name": "azuredevtestrg",
            "route": [
              {
                "address_prefix": "10.0.0.0/16",
                "name": "route1",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "name": "route2",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "name": "route3",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              }
            ],
            "subnets": [
              "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet3"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet1",
            "name": "DevTestSubnet1",
            "resource_group_name": "azuredevtestrg",
            "virtual_network_name": "DevTestVnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet2",
            "name": "DevTestSubnet2",
            "resource_group_name": "azuredevtestrg",
            "virtual_network_name": "DevTestVnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/24",
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet3",
            "name": "DevTestSubnet3",
            "resource_group_name": "azuredevtestrg",
            "virtual_network_name": "DevTestVnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rtb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet1",
            "route_table_id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/routeTables/DevTestRouteTable1",
            "subnet_id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.RouteTable1",
            "azurerm_subnet.myterraformsubnet1",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rtb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet2",
            "route_table_id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/routeTables/DevTestRouteTable2",
            "subnet_id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet2"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.RouteTable2",
            "azurerm_subnet.myterraformsubnet2",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rtb3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet3",
            "route_table_id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/routeTables/DevTestRouteTable3",
            "subnet_id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet3"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.RouteTable3",
            "azurerm_subnet.myterraformsubnet3",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myterraformnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "2024342a-3287-4af3-a02f-b8055e6b0769",
            "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet",
            "location": "westeurope",
            "name": "DevTestVnet",
            "resource_group_name": "azuredevtestrg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet1",
                "name": "DevTestSubnet1"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet2",
                "name": "DevTestSubnet2"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/592e5a64-3d32-4ec0-9afe-123411ffc68e/resourceGroups/azuredevtestrg/providers/Microsoft.Network/virtualNetworks/DevTestVnet/subnets/DevTestSubnet3",
                "name": "DevTestSubnet3"
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}